src/sass/base/_common.scss
.container {
  margin: 0 auto;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;

  @media screen and (min-width: 480px) {
    width: 480px;
  }

  @media screen and (min-width: 768px) {
    width: 740px;
  }

  @media screen and (min-width: 1280px) {
    width: 1090px;
  }
}

body {
  font-family: 'DM Sans', sans-serif;
  font-style: normal;
}

